--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/wallpaper
+.idea
+
 # Logs
 logs
 *.log
@@ -70,6 +73,7 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.local
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
